ПР3. Админка перенесена из проекта преподавателя. Исправлены некоторые недочеты в админке. Добавлена новая сущность Flowers, доработана админка. В приложении пользователя в шаблоны добавлены фрагменты. Корзины пока нет.

--- a/admin-ui/src/main/resources/templates/login.html
+++ b/admin-ui/src/main/resources/templates/login.html
@@ -1,14 +1,12 @@
-
 <!doctype html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="stylesheet" href="https://bootadmin.net/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://bootadmin.net/css/fontawesome-all.min.css">
-    <link rel="stylesheet" href="https://bootadmin.net/css/bootadmin.min.css">
+    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
+    <link rel="stylesheet" th:href="@{/css/fontawesome-all.min.css}">
+    <link rel="stylesheet" th:href="@{/css/bootadmin.min.css}">
 
     <title>Login | BootAdmin</title>
 </head>
@@ -20,19 +18,19 @@
             <h1 class="text-center mb-4">BootAdmin</h1>
             <div class="card">
                 <div class="card-body">
-                    <form>
+                    <form th:action="@{/authenticateTheUser}" method="post">
                         <div class="input-group mb-3">
                             <div class="input-group-prepend">
                                 <span class="input-group-text"><i class="fa fa-user"></i></span>
                             </div>
-                            <input type="text" class="form-control" placeholder="Username">
+                            <input type="text" class="form-control" name="username" placeholder="Username">
                         </div>
 
                         <div class="input-group mb-3">
                             <div class="input-group-prepend">
                                 <span class="input-group-text"><i class="fa fa-key"></i></span>
                             </div>
-                            <input type="password" class="form-control" placeholder="Password">
+                            <input type="password" class="form-control" name="password" placeholder="Password">
                         </div>
 
                         <div class="form-check mb-3">
@@ -57,9 +55,9 @@
     </div>
 </div>
 
-<script src="https://bootadmin.net/js/jquery.min.js"></script>
-<script src="https://bootadmin.net/js/bootstrap.bundle.min.js"></script>
-<script src="https://bootadmin.net/js/bootadmin.min.js"></script>
+<script th:src="@{js/jquery.min.js}"></script>
+<script th:src="@{js/bootstrap.bundle.min.js}"></script>
+<script th:src="@{js/bootadmin.min.js}"></script>
 
 </body>
 </html>
