--- a/user-ui/src/main/resources/templates/cart.html
+++ b/user-ui/src/main/resources/templates/cart.html
@@ -3,140 +3,69 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
 <head>
-  <title>Flower Shop - Cart</title>
-  <meta http-equiv="Content-Type" content="text/html; charset=windows-1252" />
-  <link rel="stylesheet" type="text/css" href="../static/style.css" th:href="@{/style.css}"/>
+    <title>Flower Shop - Cart</title>
+    <div th:replace="fragments/header :: head"></div>
 </head>
 <body>
 <div id="wrap">
-  <div class="header">
-    <div class="logo"><a th:href="@{/index}"><img src="../static/images/logo.gif" alt="" border="0" /></a></div>
-    <div id="menu">
-      <ul>
-        <li><a th:href="@{/index}">home</a></li>
-        <li><a th:href="@{/about}">about us</a></li>
-        <li><a th:href="@{/category}">flowers</a></li>
-        <li><a th:href="@{/specials}">specials gifts</a></li>
-        <li><a th:href="@{/myaccount}">my accout</a></li>
-        <li><a th:href="@{/register}">register</a></li>
-<!--        <li><a th:href="@{/details}">prices</a></li>-->
-        <li><a th:href="@{/contact}">contact</a></li>
-      </ul>
-    </div>
-  </div>
-  <div class="center_content">
-    <div class="left_content">
-      <div class="title"><span class="title_icon"><img src="../static/images/bullet1.gif" alt="" /></span>My cart</div>
-      <div class="feat_prod_box_details">
-        <table class="cart_table">
-          <tr class="cart_title">
-            <td>Item pic</td>
-            <td>Product name</td>
-            <td>Unit price</td>
-            <td>Qty</td>
-            <td>Total</td>
-          </tr>
-          <tr>
-            <td><a href="#"><img src="../static/images/cart_thumb.gif" alt="" border="0" class="cart_thumb" /></a></td>
-            <td>Gift flowers</td>
-            <td>100$</td>
-            <td>1</td>
-            <td>100$</td>
-          </tr>
-          <tr>
-            <td><a href="#"><img src="../static/images/cart_thumb.gif" alt="" border="0" class="cart_thumb" /></a></td>
-            <td>Gift flowers</td>
-            <td>100$</td>
-            <td>1</td>
-            <td>100$</td>
-          </tr>
-          <tr>
-            <td><a href="#"><img src="../static/images/cart_thumb.gif" alt="" border="0" class="cart_thumb" /></a></td>
-            <td>Gift flowers</td>
-            <td>100$</td>
-            <td>1</td>
-            <td>100$</td>
-          </tr>
-          <tr>
-            <td colspan="4" class="cart_total"><span class="red">TOTAL SHIPPING:</span></td>
-            <td> 250$</td>
-          </tr>
-          <tr>
-            <td colspan="4" class="cart_total"><span class="red">TOTAL:</span></td>
-            <td> 325$</td>
-          </tr>
-        </table>
-        <a href="#" class="continue">&lt; continue</a> <a href="#" class="checkout">checkout &gt;</a> </div>
-      <div class="clear"></div>
-    </div>
-    <!--end of left content-->
-    <div class="right_content">
-      <div class="languages_box"> <span class="red">Languages:</span> <a href="#"><img src="../static/images/gb.gif" alt="" border="0" /></a> <a href="#"><img src="../static/images/fr.gif" alt="" border="0" /></a> <a href="#"><img src="../static/images/de.gif" alt="" border="0" /></a> </div>
-      <div class="currency"> <span class="red">Currency: </span> <a href="#">GBP</a> <a href="#">EUR</a> <a href="#"><strong>USD</strong></a> </div>
-      <div class="cart">
-        <div class="title"><span class="title_icon"><img src="../static/images/cart.gif" alt="" /></span>My cart</div>
-        <div class="home_cart_content"> 3 x items | <span class="red">TOTAL: 100$</span> </div>
-        <a href="#" class="view_cart">view cart</a> </div>
-      <div class="title"><span class="title_icon"><img src="../static/images/bullet3.gif" alt="" /></span>About Our Shop</div>
-      <div class="about">
-        <p> <img src="../static/images/about.gif" alt="" class="right" /> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud. </p>
-      </div>
-      <div class="right_box">
-        <div class="title"><span class="title_icon"><img src="../static/images/bullet4.gif" alt="" /></span>Promotions</div>
-        <div class="new_prod_box"> <a href="#">product name</a>
-          <div class="new_prod_bg"> <span class="new_icon"><img src="../static/images/promo_icon.gif" alt="" /></span> <a href="#"><img src="../static/images/thumb1.gif" alt="" class="thumb" border="0" /></a> </div>
+    <div th:replace="fragments/header :: header-area"></div>
+
+    <div class="center_content">
+        <div class="left_content">
+            <div class="title"><span class="title_icon"><img src="../static/images/bullet1.gif" alt=""/></span>My cart
+            </div>
+            <div class="feat_prod_box_details">
+                <table class="cart_table">
+                    <tr class="cart_title">
+                        <td>Item pic</td>
+                        <td>Product name</td>
+                        <td>Unit price</td>
+                        <td>Qty</td>
+                        <td>Total</td>
+                    </tr>
+                    <tr>
+                        <td><a href="#"><img src="../static/images/cart_thumb.gif" alt="" border="0"
+                                             class="cart_thumb"/></a></td>
+                        <td>Gift flowers</td>
+                        <td>100$</td>
+                        <td>1</td>
+                        <td>100$</td>
+                    </tr>
+                    <tr>
+                        <td><a href="#"><img src="../static/images/cart_thumb.gif" alt="" border="0"
+                                             class="cart_thumb"/></a></td>
+                        <td>Gift flowers</td>
+                        <td>100$</td>
+                        <td>1</td>
+                        <td>100$</td>
+                    </tr>
+                    <tr>
+                        <td><a href="#"><img src="../static/images/cart_thumb.gif" alt="" border="0"
+                                             class="cart_thumb"/></a></td>
+                        <td>Gift flowers</td>
+                        <td>100$</td>
+                        <td>1</td>
+                        <td>100$</td>
+                    </tr>
+                    <tr>
+                        <td colspan="4" class="cart_total"><span class="red">TOTAL SHIPPING:</span></td>
+                        <td> 250$</td>
+                    </tr>
+                    <tr>
+                        <td colspan="4" class="cart_total"><span class="red">TOTAL:</span></td>
+                        <td> 325$</td>
+                    </tr>
+                </table>
+                <a href="#" class="continue">&lt; continue</a> <a href="#" class="checkout">checkout &gt;</a></div>
+            <div class="clear"></div>
         </div>
-        <div class="new_prod_box"> <a href="#">product name</a>
-          <div class="new_prod_bg"> <span class="new_icon"><img src="../static/images/promo_icon.gif" alt="" /></span> <a href="#"><img src="../static/images/thumb2.gif" alt="" class="thumb" border="0" /></a> </div>
-        </div>
-        <div class="new_prod_box"> <a href="#">product name</a>
-          <div class="new_prod_bg"> <span class="new_icon"><img src="../static/images/promo_icon.gif" alt="" /></span> <a href="#"><img src="../static/images/thumb3.gif" alt="" class="thumb" border="0" /></a> </div>
-        </div>
-      </div>
-      <div class="right_box">
-        <div class="title"><span class="title_icon"><img src="../static/images/bullet5.gif" alt="" /></span>Categories</div>
-        <ul class="list">
-          <li><a th:href="@{/category}">accesories</a></li>
-          <li><a th:href="@{/category}">flower gifts</a></li>
-          <li><a th:href="@{/category}">specials</a></li>
-          <li><a th:href="@{/category}">hollidays gifts</a></li>
-          <li><a th:href="@{/category}">accesories</a></li>
-          <li><a th:href="@{/category}">flower gifts</a></li>
-          <li><a th:href="@{/category}">specials</a></li>
-          <li><a th:href="@{/category}">hollidays gifts</a></li>
-          <li><a th:href="@{/category}">accesories</a></li>
-          <li><a th:href="@{/category}">flower gifts</a></li>
-          <li><a th:href="@{/category}">specials</a></li>
-        </ul>
-        <div class="title"><span class="title_icon"><img src="../static/images/bullet6.gif" alt="" /></span>Partners</div>
-        <ul class="list">
-          <li><a href="#">accesories</a></li>
-          <li><a href="#">flower gifts</a></li>
-          <li><a href="#">specials</a></li>
-          <li><a href="#">hollidays gifts</a></li>
-          <li><a href="#">accesories</a></li>
-          <li><a href="#">flower gifts</a></li>
-          <li><a href="#">specials</a></li>
-          <li><a href="#">hollidays gifts</a></li>
-          <li><a href="#">accesories</a></li>
-        </ul>
-      </div>
+        <!--end of left content-->
+        <div th:replace="fragments/right-content::right-content"></div>
+        <!--end of right content-->
+        <div class="clear"></div>
     </div>
-    <!--end of right content-->
-    <div class="clear"></div>
-  </div>
-  <!--end of center content-->
-  <div class="footer">
-    <div class="left_footer"><img src="../static/images/footer_logo.gif" alt=""/><br/>
-      <a href="http://csscreme.com"><img src="../static/images/csscreme.gif" alt="" border="0"/></a></div>
-    <div class="right_footer">
-      <a th:href="@{/index}">home</a>
-      <a th:href="@{/about}">about us</a>
-      <a href="#">services</a>
-      <a href="#">privacy policy</a>
-      <a th:href="@{/contact}">contact us</a>
-    </div>
-  </div>
+    <!--end of center content-->
+    <div th:replace="fragments/footer::footer"></div>
 </div>
 </body>
 </html>
