--- a/user-ui/src/main/resources/templates/register.html
+++ b/user-ui/src/main/resources/templates/register.html
@@ -3,134 +3,69 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
 <head>
-<title>Flower Shop - Register</title>
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1252" />
-<link rel="stylesheet" type="text/css" href="../static/style.css" th:href="@{/style.css}"/>
+    <title>Flower Shop - Register</title>
+    <div th:replace="fragments/header :: head"></div>
 </head>
 <body>
 <div id="wrap">
-  <div class="header">
-    <div class="logo"><a href="#"><img src="../static/images/logo.gif" alt="" border="0" /></a></div>
-    <div id="menu">
-      <ul>
-          <li class="selected"><a th:href="@{/index}">home</a></li>
-          <li><a th:href="@{/about}">about us</a></li>
-          <li><a th:href="@{/category}">flowers</a></li>
-          <li><a th:href="@{/specials}">specials gifts</a></li>
-          <li><a th:href="@{/myaccount}">my accout</a></li>
-          <li class="selected"><a th:href="@{/register}">register</a></li>
-<!--          <li><a th:href="@{/details}">prices</a></li>-->
-          <li><a th:href="@{/contact}">contact</a></li>
-      </ul>
+    <div th:replace="fragments/header :: header-area"></div>
+
+    <div class="center_content">
+        <div class="left_content">
+            <div class="title"><span class="title_icon"><img src="../static/images/bullet1.gif" alt=""/></span>Register
+            </div>
+            <div class="feat_prod_box_details">
+                <p class="details"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud. Lorem ipsum
+                    dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                    magna aliqua. Ut enim ad minim veniam, quis nostrud. </p>
+                <div class="contact_form">
+                    <div class="form_subtitle">create new account</div>
+                    <form name="register" href="#">
+                        <div class="form_row">
+                            <label class="contact"><strong>Username:</strong></label>
+                            <input type="text" class="contact_input"/>
+                        </div>
+                        <div class="form_row">
+                            <label class="contact"><strong>Password:</strong></label>
+                            <input type="text" class="contact_input"/>
+                        </div>
+                        <div class="form_row">
+                            <label class="contact"><strong>Email:</strong></label>
+                            <input type="text" class="contact_input"/>
+                        </div>
+                        <div class="form_row">
+                            <label class="contact"><strong>Phone:</strong></label>
+                            <input type="text" class="contact_input"/>
+                        </div>
+                        <div class="form_row">
+                            <label class="contact"><strong>Company:</strong></label>
+                            <input type="text" class="contact_input"/>
+                        </div>
+                        <div class="form_row">
+                            <label class="contact"><strong>Adrres:</strong></label>
+                            <input type="text" class="contact_input"/>
+                        </div>
+                        <div class="form_row">
+                            <div class="terms">
+                                <input type="checkbox" name="terms"/>
+                                I agree to the <a href="#">terms &amp; conditions</a></div>
+                        </div>
+                        <div class="form_row">
+                            <input type="submit" class="register" value="register"/>
+                        </div>
+                    </form>
+                </div>
+            </div>
+            <div class="clear"></div>
+        </div>
+        <!--end of left content-->
+        <div th:replace="fragments/right-content::right-content"></div>
+        <!--end of right content-->
+        <div class="clear"></div>
     </div>
-  </div>
-  <div class="center_content">
-    <div class="left_content">
-      <div class="title"><span class="title_icon"><img src="../static/images/bullet1.gif" alt="" /></span>Register</div>
-      <div class="feat_prod_box_details">
-        <p class="details"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud. </p>
-        <div class="contact_form">
-          <div class="form_subtitle">create new account</div>
-          <form name="register" href="#">
-            <div class="form_row">
-              <label class="contact"><strong>Username:</strong></label>
-              <input type="text" class="contact_input" />
-            </div>
-            <div class="form_row">
-              <label class="contact"><strong>Password:</strong></label>
-              <input type="text" class="contact_input" />
-            </div>
-            <div class="form_row">
-              <label class="contact"><strong>Email:</strong></label>
-              <input type="text" class="contact_input" />
-            </div>
-            <div class="form_row">
-              <label class="contact"><strong>Phone:</strong></label>
-              <input type="text" class="contact_input" />
-            </div>
-            <div class="form_row">
-              <label class="contact"><strong>Company:</strong></label>
-              <input type="text" class="contact_input" />
-            </div>
-            <div class="form_row">
-              <label class="contact"><strong>Adrres:</strong></label>
-              <input type="text" class="contact_input" />
-            </div>
-            <div class="form_row">
-              <div class="terms">
-                <input type="checkbox" name="terms" />
-                I agree to the <a href="#">terms &amp; conditions</a> </div>
-            </div>
-            <div class="form_row">
-              <input type="submit" class="register" value="register" />
-            </div>
-          </form>
-        </div>
-      </div>
-      <div class="clear"></div>
-    </div>
-    <!--end of left content-->
-    <div class="right_content">
-      <div class="languages_box"> <span class="red">Languages:</span> <a href="#"><img src="../static/images/gb.gif" alt="" border="0" /></a> <a href="#"><img src="../static/images/fr.gif" alt="" border="0" /></a> <a href="#"><img src="../static/images/de.gif" alt="" border="0" /></a> </div>
-      <div class="currency"> <span class="red">Currency: </span> <a href="#">GBP</a> <a href="#">EUR</a> <a href="#"><strong>USD</strong></a> </div>
-      <div class="cart">
-        <div class="title"><span class="title_icon"><img src="../static/images/cart.gif" alt="" /></span>My cart</div>
-        <div class="home_cart_content"> 3 x items | <span class="red">TOTAL: 100$</span> </div>
-        <a href="#" class="view_cart">view cart</a> </div>
-      <div class="title"><span class="title_icon"><img src="../static/images/bullet3.gif" alt="" /></span>About Our Shop</div>
-      <div class="about">
-        <p> <img src="../static/images/about.gif" alt="" class="right" /> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud. </p>
-      </div>
-      <div class="right_box">
-        <div class="title"><span class="title_icon"><img src="../static/images/bullet4.gif" alt="" /></span>Promotions</div>
-        <div class="new_prod_box"> <a href="#">product name</a>
-          <div class="new_prod_bg"> <span class="new_icon"><img src="../static/images/promo_icon.gif" alt="" /></span> <a href="#"><img src="../static/images/thumb1.gif" alt="" class="thumb" border="0" /></a> </div>
-        </div>
-        <div class="new_prod_box"> <a href="#">product name</a>
-          <div class="new_prod_bg"> <span class="new_icon"><img src="../static/images/promo_icon.gif" alt="" /></span> <a href="#"><img src="../static/images/thumb2.gif" alt="" class="thumb" border="0" /></a> </div>
-        </div>
-        <div class="new_prod_box"> <a href="#">product name</a>
-          <div class="new_prod_bg"> <span class="new_icon"><img src="../static/images/promo_icon.gif" alt="" /></span> <a href="#"><img src="../static/images/thumb3.gif" alt="" class="thumb" border="0" /></a> </div>
-        </div>
-      </div>
-      <div class="right_box">
-        <div class="title"><span class="title_icon"><img src="../static/images/bullet5.gif" alt="" /></span>Categories</div>
-        <ul class="list">
-          <li><a href="#">accesories</a></li>
-          <li><a href="#">flower gifts</a></li>
-          <li><a href="#">specials</a></li>
-          <li><a href="#">hollidays gifts</a></li>
-          <li><a href="#">accesories</a></li>
-          <li><a href="#">flower gifts</a></li>
-          <li><a href="#">specials</a></li>
-          <li><a href="#">hollidays gifts</a></li>
-          <li><a href="#">accesories</a></li>
-          <li><a href="#">flower gifts</a></li>
-          <li><a href="#">specials</a></li>
-        </ul>
-        <div class="title"><span class="title_icon"><img src="../static/images/bullet6.gif" alt="" /></span>Partners</div>
-        <ul class="list">
-          <li><a href="#">accesories</a></li>
-          <li><a href="#">flower gifts</a></li>
-          <li><a href="#">specials</a></li>
-          <li><a href="#">hollidays gifts</a></li>
-          <li><a href="#">accesories</a></li>
-          <li><a href="#">flower gifts</a></li>
-          <li><a href="#">specials</a></li>
-          <li><a href="#">hollidays gifts</a></li>
-          <li><a href="#">accesories</a></li>
-        </ul>
-      </div>
-    </div>
-    <!--end of right content-->
-    <div class="clear"></div>
-  </div>
-  <!--end of center content-->
-  <div class="footer">
-    <div class="left_footer"><img src="../static/images/footer_logo.gif" alt="" /><br />
-      <a href="http://csscreme.com"><img src="../static/images/csscreme.gif" alt="" border="0" /></a></div>
-    <div class="right_footer"> <a href="#">home</a> <a href="#">about us</a> <a href="#">services</a> <a href="#">privacy policy</a> <a href="#">contact us</a> </div>
-  </div>
+    <!--end of center content-->
+    <div th:replace="fragments/footer::footer"></div>
 </div>
 </body>
 </html>
