--- a/user-ui/src/main/resources/templates/specials.html
+++ b/user-ui/src/main/resources/templates/specials.html
@@ -4,32 +4,21 @@
       xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Flower Shop - Specials</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=windows-1252"/>
-    <link rel="stylesheet" type="text/css" href="../static/style.css" th:href="@{/style.css}"/>
+    <div th:replace="fragments/header :: head"></div>
 </head>
 <body>
 <div id="wrap">
-    <div class="header">
-        <div class="logo"><a th:href="@{/index}"><img src="../static/images/logo.gif" alt="" border="0"/></a></div>
-        <div id="menu">
-            <ul>
-                <li><a th:href="@{/index}">home</a></li>
-                <li><a th:href="@{/about}">about us</a></li>
-                <li><a th:href="@{/category}">flowers</a></li>
-                <li class="selected"><a th:href="@{/specials}">specials gifts</a></li>
-                <li><a th:href="@{/myaccount}">my accout</a></li>
-                <li><a th:href="@{/register}">register</a></li>
-<!--                <li><a th:href="@{/details}">prices</a></li>-->
-                <li><a th:href="@{/contact}">contact</a></li>
-            </ul>
-        </div>
-    </div>
+    <div th:replace="fragments/header :: header-area"></div>
+
     <div class="center_content">
         <div class="left_content">
-            <div class="title"><span class="title_icon"><img src="../static/images/bullet1.gif" alt=""/></span>Special gifts</div>
+            <div class="title"><span class="title_icon"><img src="../static/images/bullet1.gif" alt=""/></span>Special
+                gifts
+            </div>
             <div class="feat_prod_box">
                 <div class="prod_img"><a href="#"><img src="../static/images/prod1.gif" alt="" border="0"/></a></div>
-                <div class="prod_det_box"><span class="special_icon"><img src="../static/images/special_icon.gif" alt=""/></span>
+                <div class="prod_det_box"><span class="special_icon"><img src="../static/images/special_icon.gif"
+                                                                          alt=""/></span>
                     <div class="box_top"></div>
                     <div class="box_center">
                         <div class="prod_title">Product name</div>
@@ -45,7 +34,8 @@
             </div>
             <div class="feat_prod_box">
                 <div class="prod_img"><a href="#"><img src="../static/images/prod2.gif" alt="" border="0"/></a></div>
-                <div class="prod_det_box"><span class="special_icon"><img src="../static/images/special_icon.gif" alt=""/></span>
+                <div class="prod_det_box"><span class="special_icon"><img src="../static/images/special_icon.gif"
+                                                                          alt=""/></span>
                     <div class="box_top"></div>
                     <div class="box_center">
                         <div class="prod_title">Product name</div>
@@ -61,7 +51,8 @@
             </div>
             <div class="feat_prod_box">
                 <div class="prod_img"><a href="#"><img src="../static/images/prod1.gif" alt="" border="0"/></a></div>
-                <div class="prod_det_box"><span class="special_icon"><img src="../static/images/special_icon.gif" alt=""/></span>
+                <div class="prod_det_box"><span class="special_icon"><img src="../static/images/special_icon.gif"
+                                                                          alt=""/></span>
                     <div class="box_top"></div>
                     <div class="box_center">
                         <div class="prod_title">Product name</div>
@@ -77,7 +68,8 @@
             </div>
             <div class="feat_prod_box">
                 <div class="prod_img"><a href="#"><img src="../static/images/prod2.gif" alt="" border="0"/></a></div>
-                <div class="prod_det_box"><span class="special_icon"><img src="../static/images/special_icon.gif" alt=""/></span>
+                <div class="prod_det_box"><span class="special_icon"><img src="../static/images/special_icon.gif"
+                                                                          alt=""/></span>
                     <div class="box_top"></div>
                     <div class="box_center">
                         <div class="prod_title">Product name</div>
@@ -96,86 +88,12 @@
             <div class="clear"></div>
         </div>
         <!--end of left content-->
-        <div class="right_content">
-            <div class="languages_box"><span class="red">Languages:</span> <a href="#"><img src="../static/images/gb.gif" alt=""
-                                                                                            border="0"/></a> <a
-                    href="#"><img src="../static/images/fr.gif" alt="" border="0"/></a> <a href="#"><img src="../static/images/de.gif"
-                                                                                               alt="" border="0"/></a>
-            </div>
-            <div class="currency"><span class="red">Currency: </span> <a href="#">GBP</a> <a href="#">EUR</a> <a
-                    href="#"><strong>USD</strong></a></div>
-            <div class="cart">
-                <div class="title"><span class="title_icon"><img src="../static/images/cart.gif" alt=""/></span>My cart</div>
-                <div class="home_cart_content"> 3 x items | <span class="red">TOTAL: 100$</span></div>
-                <a href="#" class="view_cart">view cart</a></div>
-            <div class="title"><span class="title_icon"><img src="../static/images/bullet3.gif" alt=""/></span>About Our Shop
-            </div>
-            <div class="about">
-                <p><img src="../static/images/about.gif" alt="" class="right"/> Lorem ipsum dolor sit amet, consectetur
-                    adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-                    minim veniam, quis nostrud. </p>
-            </div>
-            <div class="right_box">
-                <div class="title"><span class="title_icon"><img src="../static/images/bullet4.gif" alt=""/></span>Promotions
-                </div>
-                <div class="new_prod_box"><a href="#">product name</a>
-                    <div class="new_prod_bg"><span class="new_icon"><img src="../static/images/promo_icon.gif" alt=""/></span> <a
-                            href="#"><img src="../static/images/thumb1.gif" alt="" class="thumb" border="0"/></a></div>
-                </div>
-                <div class="new_prod_box"><a href="#">product name</a>
-                    <div class="new_prod_bg"><span class="new_icon"><img src="../static/images/promo_icon.gif" alt=""/></span> <a
-                            href="#"><img src="../static/images/thumb2.gif" alt="" class="thumb" border="0"/></a></div>
-                </div>
-                <div class="new_prod_box"><a href="#">product name</a>
-                    <div class="new_prod_bg"><span class="new_icon"><img src="../static/images/promo_icon.gif" alt=""/></span> <a
-                            href="#"><img src="../static/images/thumb3.gif" alt="" class="thumb" border="0"/></a></div>
-                </div>
-            </div>
-            <div class="right_box">
-                <div class="title"><span class="title_icon"><img src="../static/images/bullet5.gif" alt=""/></span>Categories
-                </div>
-                <ul class="list">
-                  <li><a th:href="@{/category}">accesories</a></li>
-                  <li><a th:href="@{/category}">flower gifts</a></li>
-                  <li><a th:href="@{/category}">specials</a></li>
-                  <li><a th:href="@{/category}">hollidays gifts</a></li>
-                  <li><a th:href="@{/category}">accesories</a></li>
-                  <li><a th:href="@{/category}">flower gifts</a></li>
-                  <li><a th:href="@{/category}">specials</a></li>
-                  <li><a th:href="@{/category}">hollidays gifts</a></li>
-                  <li><a th:href="@{/category}">accesories</a></li>
-                  <li><a th:href="@{/category}">flower gifts</a></li>
-                  <li><a th:href="@{/category}">specials</a></li>
-                </ul>
-                <div class="title"><span class="title_icon"><img src="../static/images/bullet6.gif" alt=""/></span>Partners</div>
-                <ul class="list">
-                    <li><a href="#">accesories</a></li>
-                    <li><a href="#">flower gifts</a></li>
-                    <li><a href="#">specials</a></li>
-                    <li><a href="#">hollidays gifts</a></li>
-                    <li><a href="#">accesories</a></li>
-                    <li><a href="#">flower gifts</a></li>
-                    <li><a href="#">specials</a></li>
-                    <li><a href="#">hollidays gifts</a></li>
-                    <li><a href="#">accesories</a></li>
-                </ul>
-            </div>
-        </div>
+        <div th:replace="fragments/right-content::right-content"></div>
         <!--end of right content-->
         <div class="clear"></div>
     </div>
     <!--end of center content-->
-    <div class="footer">
-        <div class="left_footer"><img src="../static/images/footer_logo.gif" alt=""/><br/>
-            <a href="http://csscreme.com"><img src="../static/images/csscreme.gif" alt="" border="0"/></a></div>
-      <div class="right_footer">
-        <a th:href="@{/index}">home</a>
-        <a th:href="@{/about}">about us</a>
-        <a href="#">services</a>
-        <a href="#">privacy policy</a>
-        <a th:href="@{/contact}">contact us</a>
-      </div>
-    </div>
+    <div th:replace="fragments/footer::footer"></div>
 </div>
 </body>
 </html>
