ПР4. Поскольку разрабатывается цветочный магазин, критерий цвета является важным критерием отбора. В связи с этим добавлена новая сущность Colors. Добавлено отношение к Products как ManyToMany, т.к. букет может быть разноцветным. Карточка продукта частично разработана. Перенесена корзина из проекта преподавателя. Недочетов еще по карточке продукта и корзине много. Сессионности нет.

--- a/admin-ui/src/main/resources/templates/fragments/sidebar.html
+++ b/admin-ui/src/main/resources/templates/fragments/sidebar.html
@@ -14,6 +14,8 @@
             <i class="fa fa-fw fa-link"></i> Categories</a></li>
         <li th:classappend="${activePage == 'Flowers'} ? active"><a th:href="@{/flowers}">
             <i class="fa fa-fw fa-link"></i> Flowers</a></li>
+        <li th:classappend="${activePage == 'Colors'} ? active"><a th:href="@{/colors}">
+            <i class="fa fa-fw fa-link"></i> Colors</a></li>
         <li th:classappend="${activePage == 'Brands'} ? active"><a th:href="@{/brands}">
             <i class="fa fa-fw fa-link"></i> Brands</a></li>
         <li th:classappend="${activePage == 'Products'} ? active"><a th:href="@{/products}">
