--- a/user-ui/src/main/resources/static/css/style.css
+++ b/user-ui/src/main/resources/static/css/style.css
@@ -43,7 +43,7 @@ background-color:#FFFFFF;
 .header{
 width:900px;
 height:181px;
-background:url(images/header.jpg) no-repeat center;
+background:url(../images/header.jpg) no-repeat center;
 }
 .logo{
 padding:0 0 0 30px;
@@ -53,7 +53,7 @@ padding:0 0 0 30px;
 width:628px;
 height:41px;
 margin:55px 0 0 26px;
-background:url(images/menu_bg.jpg) no-repeat center;
+background:url(../images/menu_bg.jpg) no-repeat center;
 }
 #menu ul{
 display:block;
@@ -91,10 +91,10 @@ text-align:center;
 color:#fff;
 font-size:13px;
 line-height:27px;
-background:url(images/menu_bt_bg.gif) repeat-x center;
+background:url(../images/menu_bt_bg.gif) repeat-x center;
 }
 #menu ul li a:hover{
-background:url(images/menu_bt_bg.gif) repeat-x center;
+background:url(../images/menu_bt_bg.gif) repeat-x center;
 }
 /*----------------crumb_nav------------------*/
 .crumb_nav{
@@ -120,7 +120,7 @@ padding:2px 2px 0 2px;
 .center_content{
 width:900px;
 padding:0px 0 0 0;
-background:url(images/center_bg.gif) repeat-y center;
+background:url(../images/center_bg.gif) repeat-y center;
 }
 .left_content{
 width:490px;
@@ -159,7 +159,7 @@ padding:0px 15px 0 0 ;
 .about{
 width:337px;
 clear:both;
-background:url(images/border.gif) no-repeat bottom center;
+background:url(../images/border.gif) no-repeat bottom center;
 padding:0 0 20px 0;
 }
 img.right{
@@ -171,6 +171,10 @@ width:170px;
 float:left;
 padding:10px 0 0 0;
 }
+/*перенесено для кнопки Купить из кода преподавателя*/
+.shopBtn {min-height: 34px;font-size: 14px;font-weight: bold;line-height: 34px;text-align: center;color: #fff;border-radius: 2px;background: #f89406;display:inline-block;padding:0 12px;border:0;}
+.defaultBtn {min-height: 34px;font-size: 14px;font-weight: bold;line-height: 34px;text-align: center;border-radius: 2px;display:inline-block;padding:0 12px;color: #666;text-decoration: none;background: #e6e6e6;border:0;}
+.shopBtn:hover {color: #fff; text-decoration:none; background:#F86706}
 
 /*--------feat_prod_box-----------*/
 .feat_prod_box{
@@ -198,17 +202,17 @@ position:relative;
 .box_top{
 width:295px;
 height:9px;
-background:url(images/box_top.gif) no-repeat center bottom;
+background:url(../images/box_top.gif) no-repeat center bottom;
 }
 .box_center{
 width:295px;
 height:auto;
-background:url(images/box_center.gif) repeat-y center;
+background:url(../images/box_center.gif) repeat-y center;
 }
 .box_bottom{
 width:295px;
 height:9px;
-background:url(images/box_bottom.gif) no-repeat center top;
+background:url(../images/box_bottom.gif) no-repeat center top;
 }
 
 .new_prod_box{
@@ -226,7 +230,7 @@ display:block;
 width:132px;
 height:119px;
 text-align:center;
-background:url(images/new_prod_box.gif) no-repeat center;
+background:url(../images/new_prod_box.gif) no-repeat center;
 position:relative;
 }
 .new_icon{
@@ -263,7 +267,7 @@ ul.list li a{
 list-style:none;
 text-decoration:none;
 color:#000000;
-background:url(images/left_menu_bullet.gif) no-repeat left;
+background:url(../images/left_menu_bullet.gif) no-repeat left;
 padding:0 0 0 17px;
 }
 ul.list li a:hover{
@@ -358,7 +362,7 @@ width:337px;
 float:left;
 height:40px;
 margin:10px 0 10px 0;
-background:url(images/border.gif) no-repeat bottom center;
+background:url(../images/border.gif) no-repeat bottom center;
 padding:0 0 20px 0;
 }
 .home_cart_content{
@@ -425,7 +429,7 @@ cursor:pointer;
 text-align:center;
 float:right;
 color:#FFFFFF;
-background:url(images/register_bt.gif) no-repeat center;
+background:url(../images/register_bt.gif) no-repeat center;
 }
 a.contact{
 width:53px;
@@ -433,7 +437,7 @@ height:24px;
 display:block;
 float:right;
 margin:0 0 0 10px;
-background:url(images/contact_bt.gif) no-repeat center;
+background:url(../images/contact_bt.gif) no-repeat center;
 text-decoration:none;
 text-align:center;
 line-height:24px;
@@ -445,7 +449,7 @@ height:25px;
 display:block;
 float:right;
 margin:10px 30px 0 10px;
-background:url(images/register_bt.gif) no-repeat center;
+background:url(../images/register_bt.gif) no-repeat center;
 text-decoration:none;
 text-align:center;
 line-height:25px;
@@ -457,7 +461,7 @@ height:25px;
 display:block;
 float:left;
 margin:10px 0 0 0px;
-background:url(images/register_bt.gif) no-repeat center;
+background:url(../images/register_bt.gif) no-repeat center;
 text-decoration:none;
 text-align:center;
 line-height:25px;
@@ -540,7 +544,7 @@ color: #ccc;
 .footer{
 height:100px;
 border-top:1px #b2b2b2 dashed;
-background:url(images/footer_bg.gif) no-repeat bottom;
+background:url(../images/footer_bg.gif) no-repeat bottom;
 }
 .left_footer{
 float:left;
