ПР5. Сохранение сессии в redis.

--- a/user-ui/src/main/resources/templates/about.html
+++ b/user-ui/src/main/resources/templates/about.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div id="wrap">
-    <div th:replace="fragments/header :: header-area"></div>
+    <div th:replace="fragments/header :: header-area(selectedItem = 'about')"></div>
 
     <div class="center_content">
         <div class="left_content">
