--- a/user-ui/src/main/resources/templates/fragments/right-content.html
+++ b/user-ui/src/main/resources/templates/fragments/right-content.html
@@ -14,7 +14,7 @@
                                                          alt=""/></span>My cart
         </div>
         <div class="home_cart_content"> 3 x items | <span class="red">TOTAL: 100$</span></div>
-        <a href="cart.html" th:href="@{cart}" class="view_cart">view cart</a></div>
+        <a href="cart.html" th:href="@{/cart}" class="view_cart">view cart</a></div>
     <div class="title"><span class="title_icon"><img src="../static/images/bullet3.gif" th:src="@{/images/bullet3.gif}"
                                                      alt=""/></span>About Our Shop
     </div>
