--- a/user-ui/src/main/resources/templates/index.html
+++ b/user-ui/src/main/resources/templates/index.html
@@ -11,7 +11,7 @@
 
 <body>
 <div id="wrap">
-    <div th:replace="fragments/header :: header-area"></div>
+    <div th:replace="fragments/header :: header-area(selectedItem = 'home')"></div>
 
     <div class="center_content">
         <div class="left_content">
