--- a/user-ui/src/main/resources/templates/product_details.html
+++ b/user-ui/src/main/resources/templates/product_details.html
@@ -14,13 +14,14 @@
 </head>
 <body>
 <div id="wrap">
-    <div th:replace="fragments/header :: header-area"></div>
+    <div th:replace="fragments/header :: header-area(selectedItem = 'details')"></div>
 
     <div class="center_content">
         <div class="left_content" th:object="${product}">
             <div class="crumb_nav"><a th:href="@{/index}">home</a>
                 &gt;&gt;
-                <a th:href="@{/categories/select?id={id}(id=${product.categoryId})}" th:text="*{categoryName}"> category name</a>
+                <a th:href="@{/categories/select?id={id}(id=${product.categoryId})}" th:text="*{categoryName}"> category
+                    name</a>
                 &gt;&gt;
                 <span th:text="*{name}">Product name</span>
             </div>
@@ -55,8 +56,17 @@
                             <span class="colors"><img src="/images/color2.gif" alt="" border="0"/></span> <span
                                     class="colors"><img src="/images/color3.gif" alt="" border="0"/></span>
                         </div>
-                        <a th:href="@{/cart/{id}(id=${product.id})}" class="more"><img src="/images/order_now.gif"
-                                                                                       alt="" border="0"/></a>
+                        <!--                        <a th:href="@{/cart/{id}(id=${product.id})}" class="more"><img src="/images/order_now.gif"-->
+                        <!--                                                                                       alt="" border="0"/></a>-->
+
+                        <form th:action="@{/cart}" method="post">
+                            <input type="hidden" name="qty" value="1"/>
+                            <input type="hidden" name="productId" th:value="${product.id}">
+                            <div style="align-content: center">
+                                <button class="shopBtn" type="submit" title="add to cart"> Add to cart</button>
+                            </div>
+                        </form>
+
                         <div class="clear"></div>
                     </div>
                     <div class="box_bottom"></div>
