--- a/user-ui/src/main/resources/templates/specials.html
+++ b/user-ui/src/main/resources/templates/specials.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div id="wrap">
-    <div th:replace="fragments/header :: header-area"></div>
+    <div th:replace="fragments/header :: header-area(selectedItem = 'specials')"></div>
 
     <div class="center_content">
         <div class="left_content">
@@ -84,7 +84,7 @@
                 <div class="clear"></div>
             </div>
             <div class="pagination"><span class="disabled"><<</span><span class="current">1</span><a href="#">2</a><a
-                    href="#">3</a>…<a href="#">10</a><a href="#">11</a><a href="#">>></a></div>
+                    href="#">3</a>ï¿½<a href="#">10</a><a href="#">11</a><a href="#">>></a></div>
             <div class="clear"></div>
         </div>
         <!--end of left content-->
